# your-interview-guide

./: .gitignore  Cargo.toml  README.md
phase0-rust-concepts/: 01-what-is-ownership.md  02-move-semantics.md  03-borrowing.md  04-mutable-references.md  05-borrow-checker-rules.md  06-slices.md  07-structs-and-fields.md  08-methods-with-impl.md  09-enums-and-variants.md  10-match-and-pattern-matching.md  11-generics.md  12-traits.md  13-trait-bounds.md  14-lifetimes.md  15-closures.md  16-fn-fnmut-fnonce.md  17-iterator-chains.md  18-box.md  19-rc.md  20-refcell.md  21-impl-trait-vs-dyn-trait.md  22-function-pointers.md  23-error-handling.md  24-from-into-conversions.md  README.md
phase1-rust-systems/: Cargo.toml
phase10-advanced-rust/: Cargo.toml
phase11-accounts-db/: Cargo.toml
phase12-fee-scheduling/: Cargo.toml
phase13-program-runtime/: Cargo.toml
phase14-rpc-data/: Cargo.toml
phase14-rpc-data/src/: challenge_01_get_account_info.rs  challenge_02_get_transaction.rs  challenge_03_account_subscription.rs  challenge_04_slot_subscription.rs  challenge_05_token_account_index.rs  challenge_06_das_get_asset.rs  lib.rs
phase15-defi-internals/: Cargo.toml
phase16-testing-debugging/: Cargo.toml
phase17-production-ops/: Cargo.toml
phase2-data-structures/: Cargo.toml
phase2-data-structures/src/: challenge_01_lru_cache.rs  challenge_02_merkle_tree.rs  challenge_03_merkle_patricia_trie.rs  challenge_04_priority_queue.rs  challenge_05_bloom_filter.rs  challenge_06_skip_list.rs  challenge_07_concurrent_hashmap.rs  challenge_08_ring_buffer.rs  lib.rs
(+105 files in other folders)
