[workspace]
members = [
    "phase1-rust-systems",
    "phase2-data-structures",
    "phase3-algorithms",
    "phase4-serialization",
    "phase5-cryptography",
    "phase6-solana-runtime",
    "phase7-networking",
    "phase8-performance",
    "phase10-advanced-rust",
    "phase11-accounts-db",
    "phase12-fee-scheduling",
    "phase13-program-runtime",
    "phase14-rpc-data",
    "phase15-defi-internals",
    "phase16-testing-debugging",
    "phase17-production-ops",
]
resolver = "2"

[workspace.dependencies]
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
