[package]
name = "phase2-data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
